--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
         "php": "^5.6|^7.0",
 
         "doctrine/doctrine-cache-bundle": "~1.0",
-        "sylius/rbac": "^1.0",
-        "sylius/resource-bundle": "^1.0",
-        "symfony/framework-bundle": "^2.8"
+        "sylius/rbac": "^1.0@beta",
+        "sylius/resource-bundle": "^1.0@beta",
+        "symfony/framework-bundle": "^3.2"
     },
     "require-dev": {
         "phpspec/phpspec": "^3.0",
         "doctrine/orm": "^2.4.8,<2.5",
-        "symfony/form": "^2.8",
+        "symfony/form": "^3.2",
         "twig/twig": "^1.0"
     },
     "config": {
