--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "php": "^7.1",
 
         "doctrine/doctrine-cache-bundle": "~1.0",
-        "admin-platform/rbac": "^1.0@dev",
+        "admin-platform/rbac": "^1.0",
         "sylius/resource-bundle": "^1.0",
         "symfony/framework-bundle": "^3.2"
     },
