compatible with sf4 and remove no need from composer

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "doctrine/doctrine-cache-bundle": "~1.0",
         "admin-platform/rbac": "^1.0",
         "sylius/resource-bundle": "^1.0",
-        "symfony/framework-bundle": "^3.2"
+        "symfony/framework-bundle": "^3.2|^4.0"
     },
     "require-dev": {
         "phpspec/phpspec": "^3.0",
@@ -44,12 +44,6 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "repositories": [
-        {
-            "type": "path",
-            "url": "../../*/*"
-        }
-    ],
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
