--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
         "doctrine/doctrine-cache-bundle": "~1.0",
         "admin-platform/rbac": "^1.0",
         "sylius/resource-bundle": "^1.0",
-        "symfony/framework-bundle": "^3.2|^4.0"
+        "symfony/framework-bundle": "^3.2|^4.0|^5.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "^3.0",
-        "doctrine/orm": "~2.5.0",
-        "symfony/form": "^3.2",
-        "twig/twig": "^1.0"
+        "phpspec/phpspec": "^3.0|^7.0",
+        "doctrine/orm": "~2.5.0|~2.8.0",
+        "symfony/form": "^3.2|^4.0|^5.0",
+        "twig/twig": "^1.0|^2.0"
     },
     "config": {
         "bin-dir": "bin"
