--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,17 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.4",
 
         "admin-platform/rbac": "^1.0",
         "sylius/resource-bundle": "^1.0",
-        "symfony/framework-bundle": "^3.2|^4.0|^5.0"
+        "symfony/framework-bundle": "^5.0",
+        "symfony/cache": "^5.0"
     },
     "require-dev": {
         "phpspec/phpspec": "^3.0|^7.0",
         "doctrine/orm": "~2.5.0|~2.8.0",
-        "symfony/form": "^3.2|^4.0|^5.0",
+        "symfony/form": "^5.0",
         "twig/twig": "^1.0|^2.0"
     },
     "config": {
